--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,16 @@
         }
     ],
     "require": {
-        "php": "^7.3 || ^8.0",
-        "illuminate/support": "^7.0 || ^8.0",
-        "illuminate/view": "^7.0 || ^8.0",
-        "statamic/cms": "^3.1"
+        "php": "^8.1",
+        "illuminate/support": "^10.0",
+        "illuminate/view": "^10.0",
+        "statamic/cms": "^5.0"
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.3",
-        "orchestra/testbench": "^6.15",
-        "pestphp/pest": "^1.0",
-        "phpstan/phpstan": "^0.12.82"
+        "nunomaduro/collision": "^7.0",
+        "orchestra/testbench": "^8.0",
+        "pestphp/pest": "^2.0",
+        "phpstan/phpstan": "^1.10"
     },
     "config": {
         "sort-packages": true
